--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^19.0.0",
     "@angular-devkit/build-angular": "^19.0.0",
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/localize": "^19.0.6",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^16.11.35",
+    "@types/node": "^16.18.126",
     "copyfiles": "^2.4.1",
+    "dotenv-webpack": "^8.1.0",
     "jasmine-core": "~5.5.0",
     "jasmine-marbles": "~0.9.2",
     "jasmine-spec-reporter": "~7.0.0",
