--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/material": "^19.1.2",
     "@angular/platform-browser": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "luxon": "^3.5.0",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -30,6 +31,7 @@
     "@angular/compiler-cli": "^19.0.0",
     "@angular/localize": "^19.0.6",
     "@types/jasmine": "~5.1.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^16.18.126",
     "copyfiles": "^2.4.1",
     "dotenv-webpack": "^8.1.0",
