--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/localize": "^19.0.6",
+    "@ngx-env/builder": "^19.0.4",
     "@types/jasmine": "~5.1.0",
     "@types/luxon": "^3.4.2",
     "@types/node": "^16.18.126",
