--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@angular/core": "^19.0.0",
     "@angular/forms": "^19.0.0",
     "@angular/material": "^19.1.2",
+    "@angular/material-luxon-adapter": "^19.1.5",
+    "@angular/material-moment-adapter": "^19.1.5",
     "@angular/platform-browser": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "jwt-decode": "^4.0.0",
     "luxon": "^3.5.0",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
